@@ -1,3 +1,6 @@
+2010-09-11:
+EffectResource:
+	*Rewrote to handle file sections
 2010-09-10:
 RigResource:
 	*Removed platform-specific code to resolve problem in Windows7
